# SCI_Debate_MultiAgent

./: .gitignore  Makefile  README.md  app.py  pyproject.toml
experiments/: run_demo.py
scidebate/: __init__.py  app.py  debate.py  prompts.py  test.py
scidebate/agents/: __init__.py  base.py  con.py  judge.py  pro.py
scidebate/llms/: __init__.py  base.py  ollama_backend.py
scidebate/memory/: __init__.py  base.py  chat_history.py
tests/: test_agents.py  test_debate.py  test_llm.py  test_memory.py  test_prompts.py
